(library
 (public_name nightmare_js)
 (name nightmare_js)
 (js_of_ocaml
  (javascript_files stubs/promise_stubs.js))
 (libraries preface js_of_ocaml-compiler.runtime lwt js_of_ocaml-lwt)
 (modules_without_implementation aliases interfaces bindings)
 (modes byte)
 (preprocess
  (pps js_of_ocaml-ppx)))
